--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
+  <!-- logo heder -->
   <body>
     <header class="page-header">
       <nav class="page-navigation">
